feat(issue1195): introduce goal group on score calculation for goals on different scale (#1196)
Signed-off-by: Shichao Nie <niesc@automq.com>